[tool.poetry]
name = "pubmed_fetcher"
version = "0.1.0"
description = "Fetch PubMed papers with pharma/biotech affiliations"
authors = ["Suryansh Chaudhary <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"

[tool.poetry.scripts]
get-papers-list = "cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
